# ai-code-converter

./: .env.example  .gitignore  README.md  convert_project.py  pyproject.toml  requirements.txt  test_converter.py
examples/: sample.py
src/: __init__.py  agent.py  file_discovery.py  multi_file_converter.py  progress_tracker.py  prompts.py  single_file_converter.py  state.py  symbol_cache.py  tools.py
